--- a/BuiltSpaceApp/android/app/build.gradle
+++ b/BuiltSpaceApp/android/app/build.gradle
@@ -128,7 +128,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.realmdbtest"
+        applicationId "com.builtspaceapp"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
@@ -179,7 +179,6 @@ android {
 }
 
 dependencies {
-    implementation project(':realm')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.facebook.react:react-native:+"  // From node_modules
 
