--- a/BuiltSpaceApp/android/app/src/main/AndroidManifest.xml
+++ b/BuiltSpaceApp/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="com.realmdbtest">
+  package="com.builtspaceapp">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
