--- a/BuiltSpaceApp/android/settings.gradle
+++ b/BuiltSpaceApp/android/settings.gradle
@@ -1,5 +1,3 @@
-rootProject.name = 'realmdbtest'
-include ':realm'
-project(':realm').projectDir = new File(rootProject.projectDir, '../node_modules/realm/android')
+rootProject.name = 'BuiltSpaceApp'
 apply from: file("../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesSettingsGradle(settings)
 include ':app'
