--- a/BuiltSpaceApp/ios/BuiltSpaceApp.xcodeproj/xcshareddata/xcschemes/BuiltSpaceApp-tvOS.xcscheme
+++ b/BuiltSpaceApp/ios/BuiltSpaceApp.xcodeproj/xcshareddata/xcschemes/BuiltSpaceApp-tvOS.xcscheme
@@ -29,9 +29,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
-               BuildableName = "realmdbtest-tvOS.app"
-               BlueprintName = "realmdbtest-tvOS"
-               ReferencedContainer = "container:realmdbtest.xcodeproj">
+               BuildableName = "BuiltSpaceApp-tvOS.app"
+               BlueprintName = "BuiltSpaceApp-tvOS"
+               ReferencedContainer = "container:BuiltSpaceApp.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
@@ -43,9 +43,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "2D02E48F1E0B4A5D006451C7"
-               BuildableName = "realmdbtest-tvOSTests.xctest"
-               BlueprintName = "realmdbtest-tvOSTests"
-               ReferencedContainer = "container:realmdbtest.xcodeproj">
+               BuildableName = "BuiltSpaceApp-tvOSTests.xctest"
+               BlueprintName = "BuiltSpaceApp-tvOSTests"
+               ReferencedContainer = "container:BuiltSpaceApp.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -61,9 +61,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "2D02E48F1E0B4A5D006451C7"
-               BuildableName = "realmdbtest-tvOSTests.xctest"
-               BlueprintName = "realmdbtest-tvOSTests"
-               ReferencedContainer = "container:realmdbtest.xcodeproj">
+               BuildableName = "BuiltSpaceApp-tvOSTests.xctest"
+               BlueprintName = "BuiltSpaceApp-tvOSTests"
+               ReferencedContainer = "container:BuiltSpaceApp.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -71,9 +71,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
-            BuildableName = "realmdbtest-tvOS.app"
-            BlueprintName = "realmdbtest-tvOS"
-            ReferencedContainer = "container:realmdbtest.xcodeproj">
+            BuildableName = "BuiltSpaceApp-tvOS.app"
+            BlueprintName = "BuiltSpaceApp-tvOS"
+            ReferencedContainer = "container:BuiltSpaceApp.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -94,9 +94,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
-            BuildableName = "realmdbtest-tvOS.app"
-            BlueprintName = "realmdbtest-tvOS"
-            ReferencedContainer = "container:realmdbtest.xcodeproj">
+            BuildableName = "BuiltSpaceApp-tvOS.app"
+            BlueprintName = "BuiltSpaceApp-tvOS"
+            ReferencedContainer = "container:BuiltSpaceApp.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
@@ -113,9 +113,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
-            BuildableName = "realmdbtest-tvOS.app"
-            BlueprintName = "realmdbtest-tvOS"
-            ReferencedContainer = "container:realmdbtest.xcodeproj">
+            BuildableName = "BuiltSpaceApp-tvOS.app"
+            BlueprintName = "BuiltSpaceApp-tvOS"
+            ReferencedContainer = "container:BuiltSpaceApp.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
