--- a/BuiltSpaceApp/ios/BuiltSpaceApp.xcodeproj/xcshareddata/xcschemes/BuiltSpaceApp.xcscheme
+++ b/BuiltSpaceApp/ios/BuiltSpaceApp.xcodeproj/xcshareddata/xcschemes/BuiltSpaceApp.xcscheme
@@ -29,9 +29,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "realmdbtest.app"
-               BlueprintName = "realmdbtest"
-               ReferencedContainer = "container:realmdbtest.xcodeproj">
+               BuildableName = "BuiltSpaceApp.app"
+               BlueprintName = "BuiltSpaceApp"
+               ReferencedContainer = "container:BuiltSpaceApp.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
@@ -43,9 +43,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "realmdbtestTests.xctest"
-               BlueprintName = "realmdbtestTests"
-               ReferencedContainer = "container:realmdbtest.xcodeproj">
+               BuildableName = "BuiltSpaceAppTests.xctest"
+               BlueprintName = "BuiltSpaceAppTests"
+               ReferencedContainer = "container:BuiltSpaceApp.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -61,9 +61,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "realmdbtestTests.xctest"
-               BlueprintName = "realmdbtestTests"
-               ReferencedContainer = "container:realmdbtest.xcodeproj">
+               BuildableName = "BuiltSpaceAppTests.xctest"
+               BlueprintName = "BuiltSpaceAppTests"
+               ReferencedContainer = "container:BuiltSpaceApp.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -71,9 +71,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "realmdbtest.app"
-            BlueprintName = "realmdbtest"
-            ReferencedContainer = "container:realmdbtest.xcodeproj">
+            BuildableName = "BuiltSpaceApp.app"
+            BlueprintName = "BuiltSpaceApp"
+            ReferencedContainer = "container:BuiltSpaceApp.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -94,9 +94,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "realmdbtest.app"
-            BlueprintName = "realmdbtest"
-            ReferencedContainer = "container:realmdbtest.xcodeproj">
+            BuildableName = "BuiltSpaceApp.app"
+            BlueprintName = "BuiltSpaceApp"
+            ReferencedContainer = "container:BuiltSpaceApp.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
@@ -113,9 +113,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "realmdbtest.app"
-            BlueprintName = "realmdbtest"
-            ReferencedContainer = "container:realmdbtest.xcodeproj">
+            BuildableName = "BuiltSpaceApp.app"
+            BlueprintName = "BuiltSpaceApp"
+            ReferencedContainer = "container:BuiltSpaceApp.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
