--- a/BuiltSpaceApp/ios/BuiltSpaceApp/Info.plist
+++ b/BuiltSpaceApp/ios/BuiltSpaceApp/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>realmdbtest</string>
+	<string>BuiltSpaceApp</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
