--- a/BuiltSpaceApp/ios/Podfile
+++ b/BuiltSpaceApp/ios/Podfile
@@ -1,8 +1,8 @@
 platform :ios, '9.0'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
 
-target 'realmdbtest' do
-  # Pods for realmdbtest
+target 'BuiltSpaceApp' do
+  # Pods for BuiltSpaceApp
   pod 'FBLazyVector', :path => "../node_modules/react-native/Libraries/FBLazyVector"
   pod 'FBReactNativeSpec', :path => "../node_modules/react-native/Libraries/FBReactNativeSpec"
   pod 'RCTRequired', :path => "../node_modules/react-native/Libraries/RCTRequired"
@@ -34,9 +34,7 @@ target 'realmdbtest' do
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
 
-  pod 'RealmJS', :path => '../node_modules/realm'
-
-  target 'realmdbtestTests' do
+  target 'BuiltSpaceAppTests' do
     inherit! :search_paths
     # Pods for testing
   end
@@ -44,10 +42,10 @@ target 'realmdbtest' do
   use_native_modules!
 end
 
-target 'realmdbtest-tvOS' do
-  # Pods for realmdbtest-tvOS
+target 'BuiltSpaceApp-tvOS' do
+  # Pods for BuiltSpaceApp-tvOS
 
-  target 'realmdbtest-tvOSTests' do
+  target 'BuiltSpaceApp-tvOSTests' do
     inherit! :search_paths
     # Pods for testing
   end
