--- a/BuiltSpaceApp/package.json
+++ b/BuiltSpaceApp/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.6",
     "@react-native-community/netinfo": "^5.5.0",
+    "app": "^0.1.0",
     "mem": "^6.0.1",
     "react": "16.9.0",
     "react-native": "0.61.5",
