--- a/BuiltSpaceApp/package.json
+++ b/BuiltSpaceApp/package.json
@@ -16,6 +16,7 @@
     "mem": "^6.0.1",
     "react": "16.9.0",
     "react-native": "0.61.5",
+    "react-native-camera-kit": "^8.0.4",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "^1.5.3",
     "react-native-reanimated": "^1.7.0",
