--- a/BuiltSpaceApp/package.json
+++ b/BuiltSpaceApp/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/image-editor": "^2.3.0",
     "@react-native-community/masked-view": "^0.1.6",
     "@react-native-community/netinfo": "^5.5.0",
     "app": "^0.1.0",
@@ -18,7 +19,9 @@
     "react-native": "0.61.5",
     "react-native-camera-kit": "^8.0.4",
     "react-native-elements": "^1.2.7",
+    "react-native-fs": "^2.16.6",
     "react-native-gesture-handler": "^1.5.3",
+    "react-native-image-crop-picker": "^0.28.0",
     "react-native-reanimated": "^1.7.0",
     "react-native-safe-area-context": "^0.6.4",
     "react-native-safe-area-view": "^1.0.0",
